[package]
name = "max-order-elements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.1"
num-integer = "0.1.45"
num-modular = "0.5.1"
num-prime = { version = "0.4.3", default-features = false }
num-traits = "0.2.15"
